--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,37 +1,33 @@
-name: Build Android APK
+name: Build Android App
 
 on:
   push:
     branches: [ "master", "main" ]
-  pull_request:
-    branches: [ "master", "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: set up JDK 17
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
 
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
       with:
-        gradle-version: 8.3
+        gradle-version: 8.2
 
-    - name: Build with Gradle
-      run: gradle assembleDebug --stacktrace
+    - name: Build Debug APK
+      run: gradle assembleDebug --no-daemon --stacktrace
 
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
-        name: app-debug
+        name: Cookie-Grabber-App
         path: app/build/outputs/apk/debug/app-debug.apk
