--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,6 +3,7 @@ name: Build Android App
 on:
   push:
     branches: [ "master", "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -10,24 +11,26 @@ jobs:
 
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
     - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+      uses: gradle/gradle-build-action@v3
       with:
-        gradle-version: 8.2
+        gradle-version: 8.5
 
     - name: Build Debug APK
-      run: gradle assembleDebug --no-daemon --stacktrace
+      id: build_step
+      run: gradle assembleDebug --stacktrace
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: Cookie-Grabber-App
         path: app/build/outputs/apk/debug/app-debug.apk
+        compression-level: 0
