--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
-plugins {
-    id 'com.android.application' version '8.1.1' apply false
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // تحديث إلى نسخة مستقرة جداً ومتوافقة
+        classpath 'com.android.tools.build:gradle:8.2.0'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
