--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,9 @@
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
     dependencies {
-        // تحديث إلى نسخة مستقرة جداً ومتوافقة
         classpath 'com.android.tools.build:gradle:8.2.0'
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
+plugins {
+    id 'com.android.application' version '8.2.0' apply false
 }
